# traceforge

./: .coverage  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SPEC.md  pyproject.toml
.github/: copilot-setup-steps.yml
.github/workflows/: ci-lint.yml  ci-test.yml  deploy-docs.yml  publish-title-model.yml  publish.yml  release.yml  tool-surface-audit.yml  weekly-audit-job.md  weekly-cli-surface-audit.md  weekly-compat-audit.yml
dashboard/: index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
dashboard/src/: App.tsx  index.css  store.tsx
docs/: dashboard-spec.md  design-phase-tracker.md  gate-real-cli-smoke.md  governance-extensions-design.md  persistence-durability.md  vscode-trace-capture.md  weekly-audit-job.md
research/: .gitignore  README.md  pyproject.toml
research/data/: manifest.yaml
research/docs/: 00-overview.md  01-activity-step-classifier.md  02-data-inventory.md  03-feature-design.md  04-transfer-strategy.md  05-data-sizing.md  06-pipeline-architecture.md  07-activity-step-taxonomy.md  08-no-heuristics-policy.md  09-golden-corpus-v1-outcomes.md  10-mixed-corpus-v2-plan.md  11-mixed-corpus-v3.md
research/docs/archive/: activity-step-taxonomy-research-raw.md  design-phase-tracker-v1-full.md
research/experiments/: README.md  activity-step-classifier-transfer.yaml  activity-step-taxonomy-pilot.yaml  activity-step-taxonomy.yaml  boundary-classifier-baselines.yaml  boundary-classifier-production.yaml  labeling-runtime.yaml  mixed-corpus-v2.yaml  mixed-corpus-v3.yaml  phase-classifier-baselines.yaml  phase-narration-relabel.yaml  phase-tracker-window-sweep.yaml  titler-architecture-sweep.yaml  titler-codeplane-distill.yaml  titler-codeplane-rescue.yaml  titler-commit-data.yaml  titler-context-width.yaml  titler-domain-diverse-retrain.yaml  titler-grounded-decoding.yaml  titler-live-footprint.yaml  titler-prompt-to-task.yaml  titler-rationale-distillation.yaml  titler-request-dedicated.yaml  titler-request-volume-sweep.yaml  titler-small-capacity.yaml  titler-summarization-specialist.yaml
research/prompts/: activity-step-labeling.md  combined-labeling.md  redteam-labeling.md
research/scripts/: _backfill_motivation.py  _title_claude_e2e.py  _title_claude_judge.py  _title_codeplane_test.py  _title_commit_build.py  _title_compose.py  _title_distill_label.py  _title_eval_swebench.py  _title_export.py  _title_footprint.py  _title_hygiene.py  _title_investigate_fit.py  _title_judge.py  _title_object.py  _title_ort.py  _title_pipebench.py  _title_polish_ceiling.py  _title_prompt_dataset.py  _title_quant.py  _title_rationale.py  _title_request_diverse.py  _title_request_sweep.py  _title_rescue_build.py  _title_sent.py  _title_session_probe.py  _title_synth_aoai.py  _title_synth_requests.py  _title_t5.py  _title_t5_train.py  _title_templates.py  _title_toc_e2e.py  _title_toc_metrics.py  build_labeling_manifest.py  build_mixed_manifest.py  build_training_tables.py  build_v3_manifest.py  download_swe_agent_shard.py  eval_boundary_decode.py  eval_boundary_pipeline_e2e.py  eval_boundary_transfer.py  (+30 more)
research/src/traceforge_research/: __init__.py  manifest.py  mlflow_utils.py  paths.py
research/src/traceforge_research/ingest/: __init__.py  codeplane.py  commitpack.py  copilot.py  swe_agent.py
research/src/traceforge_research/labeling/: __init__.py  activity_step.py  combined.py  framework.py  redteam.py
research/src/traceforge_research/labeling/backends/: copilot_sdk.py
research/src/traceforge_research/training/: __init__.py  evaluate.py  features.py  inference.py  segmentation.py
research/src/tracemill_research/: __init__.py  config.py  manifest.py  mlflow_utils.py  paths.py
research/src/tracemill_research/ingest/: codeplane.py  commitpack.py  copilot.py  swe_agent.py
research/src/tracemill_research/labeling/: __init__.py  activity_step.py  canonical_view.py  combined.py  framework.py  redteam.py
research/src/tracemill_research/labeling/backends/: __init__.py  aoai.py  copilot_sdk.py
research/src/tracemill_research/training/: evaluate.py  features.py  inference.py  segmentation.py
research/tests/: test_mlflow_registration.py  test_research_config.py
scripts/: build_dashboard.py  check_framework_compat.py  generate_types.py  generate_types.sh  verify_no_lfs_pointers.py
scripts/capture_traces/: README.md  _harness.py  _repo_task.py  capture_antigravity.py  capture_copilot.py  capture_copilot_vscode.py  capture_crewai.py  capture_filebased.py  capture_langchain.py  capture_langgraph.py  capture_maf.py  capture_openai_agents.py  capture_pydantic_ai.py  capture_sdk_template.py  capture_semantic_kernel.py  capture_smolagents.py  derive_aider_markdown.py  derive_copilot_markdown.py  regen_golden_snapshots.py  synthesize_antigravity_fixture.py  synthesize_maf_otel.py
src/traceforge/: __init__.py  __main__.py  enricher.py  models.py  pipeline.py  progress.py  trace.py  types.py
src/tracemill/: __init__.py  __main__.py  _generated.py  classify.py  enricher.py  models.py  pipeline.py  trace.py  types.py
tests/: README.md  conftest.py  test_config.py  test_config_dump.py  test_copilot_preparser.py  test_sqlite_source.py
tests/e2e/: _cli.py  _sink_governance.py  conftest.py  test_auto_detect_e2e.py  test_cli_config_e2e.py  test_cli_detect_e2e.py  test_cli_download_model_e2e.py  test_cli_gate_e2e.py  test_cli_init_e2e.py  test_cli_replay_e2e.py  test_cli_score_e2e.py  test_cli_status_e2e.py  test_cli_watch_e2e.py  test_config_precedence_e2e.py  test_copilot_hook_classification.py  test_copilot_identity_cost_enrichment.py  test_raw_traces.py  (+36 more)
tests/fixtures/demo_repos/demo-issue-tracker-api/: API_REFERENCE.md  CHANGELOG.md  DOCUMENTATION_AUDIT.md  README.md  REPO_STRUCTURE_AUDIT.md  pyproject.toml
tests/fixtures/demo_repos/demo-issue-tracker-api/app/: README.md  __init__.py  main.py  models.py  repository.py  service.py
tests/fixtures/demo_repos/demo-issue-tracker-api/tests/: README.md  test_api.py  test_version.py
website/: docusaurus.config.js  package-lock.json  sidebars.js
(+661 files in other folders)
