[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracemill"
version = "0.1.0"
description = "Agent event observation pipeline with pluggable storage backends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
dependencies = [
    "alembic>=1.13",
    "click>=8.1",
    "httpx>=0.25",
    "joblib>=1.3",
    "model2vec>=0.8.2",
    "pyarrow>=15",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
    "scipy>=1.11",
    "sqlalchemy>=2.0",
    "tree-sitter>=0.24",
    "tree-sitter-bash>=0.24",
    "tree-sitter-markdown>=0.5",
    "tree-sitter-powershell>=0.24",
    "tzdata>=2024.1 ; platform_system == 'Windows'",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
s3 = [
    "boto3>=1.28",
]
title = [
    "numpy>=1.24",
    "onnxruntime>=1.17",
    "tokenizers>=0.15",
]
full = [
    "boto3>=1.28",
    "numpy>=1.24",
    "onnxruntime>=1.17",
    "tokenizers>=0.15",
]

[project.scripts]
tracemill = "tracemill.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Vendored demo repos (tests/fixtures/demo_repos/) carry their own test suites and
# third-party deps (fastapi, etc.) and must not be collected by tracemill's suite.
addopts = "--ignore=tests/fixtures/demo_repos"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
ignore = [
    "E741",   # ambiguous variable name (used intentionally in comprehensions)
    "F821",   # undefined name — false positives for string-quoted forward references
]

[tool.hatch.build.targets.wheel]
packages = ["src/tracemill"]
artifacts = ["src/tracemill/phase/data/*.joblib", "src/tracemill/boundary/data/*.joblib", "src/tracemill/title/data/*.onnx", "src/tracemill/title/data/*.json"]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.63.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "crewai>=0.80",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "semantic-kernel>=1.20",
    "smolagents>=1.0",
    "openai-agents>=0.1",
]

