[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracemill"
version = "0.1.0"
description = "Agent event observation pipeline with pluggable storage backends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
dependencies = [
    "alembic>=1.13",
    "click>=8.1",
    "httpx>=0.25",
    "joblib>=1.3",
    "litellm>=1.0",
    "model2vec>=0.8.2",
    "numpy>=1.24",
    "onnxruntime>=1.17",
    "pyarrow>=15",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
    "scipy>=1.11",
    "sqlalchemy>=2.0",
    "tokenizers>=0.15",
    "tracemill-title-model>=0.2",
    "tree-sitter>=0.24",
    "tree-sitter-bash>=0.24",
    "tree-sitter-markdown>=0.5",
    "tree-sitter-powershell>=0.24",
    "tzdata>=2024.1 ; platform_system == 'Windows'",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff==0.15.20",  # pinned to match CI (ci-lint.yml); ruff format output is version-sensitive
]
s3 = [
    "boto3>=1.28",
]

[project.scripts]
tracemill = "tracemill.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Vendored demo repos (tests/fixtures/demo_repos/) carry their own test suites and
# third-party deps (fastapi, etc.) and must not be collected by tracemill's suite.
addopts = "--ignore=tests/fixtures/demo_repos"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
ignore = [
    "E741",   # ambiguous variable name (used intentionally in comprehensions)
    "F821",   # undefined name — false positives for string-quoted forward references
]

[tool.hatch.build.targets.wheel]
packages = ["src/tracemill"]
# The titler ONNX weights ship in the separate `tracemill-title-model` package
# (a hard dependency), NOT in this wheel. Only the tiny non-model data files
# (boilerplate list, phase/boundary heads) are force-included here.
artifacts = ["src/tracemill/phase/data/*.joblib", "src/tracemill/phase/data/potion-base-8M/*", "src/tracemill/boundary/data/*.joblib", "src/tracemill/title/data/*.json"]

# During development, resolve the model package from the in-repo path so an
# editable `uv sync` serves the real weights without a PyPI/GitHub round-trip.
# This source is uv-only and is stripped from the published wheel (the base
# `tracemill-title-model>=0.2` dependency is what real installs resolve).
[tool.uv.sources]
tracemill-title-model = { path = "packages/tracemill-title-model", editable = true }

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.63.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "crewai>=0.80",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "semantic-kernel>=1.20",
    "smolagents>=1.0",
    "openai-agents>=0.1",
]

