[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traceforge-toolkit"
version = "0.1.0"
description = "Framework-agnostic, CPU-only pipeline that forges AI agent traces into classified, risk-scored, governed output"
readme = "README.md"
license = "MIT"
authors = [{ name = "David Finson", email = "davidfinson@microsoft.com" }]
requires-python = ">=3.11,<3.14"
keywords = [
    "agent",
    "observability",
    "governance",
    "ai-agents",
    "llm",
    "tracing",
    "coding-agents",
    "risk-scoring",
]
# NOTE: no legacy "License :: OSI Approved :: MIT License" classifier — the SPDX
# `license = "MIT"` above emits Metadata 2.4 `License-Expression: MIT` (PEP 639),
# and hatchling rejects a license expression combined with a license classifier.
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "alembic>=1.13",
    "click>=8.1",
    "httpx>=0.25",
    "joblib>=1.3",
    "litellm>=1.0",
    "model2vec>=0.8.2",
    "numpy>=1.24",
    "onnxruntime>=1.17",
    "pyarrow>=15",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
    "scipy>=1.11",
    "sqlalchemy>=2.0",
    "tokenizers>=0.15",
    "traceforge-title-model>=0.2",
    "tree-sitter>=0.24",
    "tree-sitter-bash>=0.24",
    "tree-sitter-markdown>=0.5",
    "tree-sitter-powershell>=0.24",
    "tzdata>=2024.1 ; platform_system == 'Windows'",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff==0.15.20",  # pinned to match CI (ci-lint.yml); ruff format output is version-sensitive
]
s3 = [
    "boto3>=1.28",
]

[project.scripts]
traceforge = "traceforge.cli:main"

[project.urls]
Homepage = "https://github.com/dfinson/traceforge"
Repository = "https://github.com/dfinson/traceforge"
Issues = "https://github.com/dfinson/traceforge/issues"
Changelog = "https://github.com/dfinson/traceforge/releases"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Vendored demo repos (tests/fixtures/demo_repos/) carry their own test suites and
# third-party deps (fastapi, etc.) and must not be collected by traceforge's suite.
# --strict-markers turns any unregistered marker into an error, so the marker list
# below is the single source of truth (typos fail fast instead of silently no-op'ing).
addopts = "--strict-markers --ignore=tests/fixtures/demo_repos"
markers = [
    "e2e: end-to-end test that drives real I/O (subprocess CLI, live sources/sinks, gate IPC).",
    "slow: test that spawns a subprocess or otherwise runs longer than a unit test.",
    "net: test that uses a local loopback fake network server (never an external host).",
    "windows_only: test that only applies on Windows; auto-skipped elsewhere.",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
ignore = [
    "E741",   # ambiguous variable name (used intentionally in comprehensions)
    "F821",   # undefined name — false positives for string-quoted forward references
]

[tool.hatch.build.targets.wheel]
packages = ["src/traceforge"]
# The titler ONNX weights ship in the separate `traceforge-title-model` package
# (a hard dependency), NOT in this wheel. Only the tiny non-model data files
# (boilerplate list, phase/boundary heads) are force-included here.
artifacts = ["src/traceforge/phase/data/*.joblib", "src/traceforge/phase/data/potion-base-8M/*", "src/traceforge/boundary/data/*.joblib", "src/traceforge/title/data/*.json"]

[tool.hatch.build.targets.sdist]
# Keep the core sdist lean and safely under PyPI's 100 MiB per-file cap: ship only
# what's needed to build the wheel. `only-include` (not `include`) is a strict
# allowlist, so it also drops hatchling's default "every README.md/pyproject.toml
# in the tree" selection. Excludes packages/ — the titler weights ship as their own
# `traceforge-title-model` distribution, so bundling them here would add ~95 MB of
# redundant ONNX and push the sdist past the limit — plus tests/, research/, and
# docs/ fixtures that a source build of the wheel does not require.
only-include = [
    "src/traceforge",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

# During development, resolve the model package from the in-repo path so an
# editable `uv sync` serves the real weights without a PyPI/GitHub round-trip.
# This source is uv-only and is stripped from the published wheel (the base
# `traceforge-title-model>=0.2` dependency is what real installs resolve).
[tool.uv.sources]
traceforge-title-model = { path = "packages/traceforge-title-model", editable = true }

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.63.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5.0",
    "boto3>=1.28",
    "moto[s3]>=5.0",
    "crewai>=0.80",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "semantic-kernel>=1.20",
    "smolagents>=1.0",
    "openai-agents>=0.1",
    "pydantic-ai-slim>=1.0",
    "agent-framework-core>=1.0",
]

