[project]
name = "demo-issue-tracker-api"
version = "0.1.0"
description = "Demo FastAPI repo for CodePlane screenshots"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
  "pydantic>=2,<3",
]

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "httpx>=0.28,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
